inserção de todas as fotos do carrocel

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="off-canvas position-left vertical_menu" id="offCanvas" data-off-canvas >
             <ul class="vertical menu nav_bottons">
                 <li><a href="#apresentacao" >Apresentação</a></li>
-                <li><a href="#orbit_container">Carrossel</a></li>
+                <li><a href="#carrocel">Carrossel</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </div>
@@ -34,12 +34,13 @@
                 <div class="grid-x grid-padding-x align-center">
                     <div class="cell small-12 text-center" >
                         <h1 class="bem_vindo">Seja bem vindo</h1>
-                        <p>Somos uma empresa dedicada a fornecer as melhores soluções para nossos clientes.</p>
+                        <p>Na Vila Oliveira Eventos, somos especialistas em transformar seus sonhos em realidade. Oferecemos uma ampla variedade de espaços para aluguéis, perfeitos para qualquer tipo de evento, desde casamentos e aniversários até conferências corporativas e workshops. <br>
+sso é proporcionar uma experiência inesquecível para você e seus convidados. Entre em contato conosco hoje mesmo para agendar uma visita e descobrir como podemos tornar seu evento especial!</p>
                     </div>
                 </div>
             </section>
             
-            <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
+            <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit id="carrocel">
                 <h1>Conheça nosso espaço</h1>
                 <ul class="orbit-container">
                   <li class="is-active orbit-slide">
@@ -49,13 +50,26 @@
                     <img src="img/02.PNG" alt="Image 2">
                   </li>
                   <li class="orbit-slide">
-                    <img src="img/03.PNG" alt="Image 3">
+                    <img src="img/03.PNG" alt="Image 4">
                   </li>
+                  <li class="orbit-slide">
+                    <img src="img/Capturar2.PNG" alt="Image 5">
+                  </li>
+                  <li class="orbit-slide">
+                    <img src="img/Capturar3.PNG" alt="Image 6">
+                  </li>
+                  <li class="orbit-slide">
+                    <img src="img/Capturar5.PNG" alt="Image 7">
+                  </li>
+                  
                 </ul>
                 <nav class="orbit-bullets">
                   <button class="is-active" data-slide="0"></button>
                   <button data-slide="1"></button>
                   <button data-slide="2"></button>
+                  <button data-slide="3"></button>
+                  <button data-slide="4"></button>
+                  <button data-slide="5"></button>
                 </nav>
                 <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>◀</button>
                 <button class="orbit-next"><span class="show-for-sr">Next Slide</span>▶</button>
