Ligação dos botões de contato com a API do whatsapp

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ sso é proporcionar uma experiência inesquecível para você e seus convidados.
                 <div class="grid-x grid-padding-x align-center">
                     <div class="cell small-12 text-center">
                         <h1>Entre em contato conosco</h1>
-                        <a href="https://wa.me/SEUNUMERO" target="_blank" >
+                        <a href="https://wa.me/553196051534" target="_blank" >
                             <img src="img/Henrique.jpg" alt="Contato WhatsApp" class="img_whatsapp">
                         </a>
                         <figcaption>Henrique</figcaption>
