--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <div class="grid-x grid-padding-x align-center">
                     <div class="cell small-12 text-center" >
                         <h1 class="bem_vindo">Seja bem vindo</h1>
-                        <p>Na Vila Oliveira Eventos, somos especialistas em transformar seus sonhos em realidade. Oferecemos uma ampla variedade de espaços para aluguéis, perfeitos para qualquer tipo de evento, desde casamentos e aniversários até conferências corporativas e workshops. <br>
-sso é proporcionar uma experiência inesquecível para você e seus convidados. Entre em contato conosco hoje mesmo para agendar uma visita e descobrir como podemos tornar seu evento especial!</p>
+                        <p>O Villa Oliveira, localizado em Moeda-MG, é um centro comercial que preserva a história da cidade. Instalado em uma casa de 1924, o local mantém a arquitetura original, proporcionando uma atmosfera nostálgica. Além das lojas que oferecem produtos autênticos, o centro conta com opções de alimentação, entretenimento e eventos, tornando-se um ponto turístico atrativo. O Villa Oliveira combina tradição e modernidade, oferecendo uma experiência rica aos visitantes.</p>
                     </div>
                 </div>
             </section>
